# pluralsight--cpp-patterns--

./: .gitignore  CMakeLists.txt  README.md
advanced-creational-patterns/: CMakeLists.txt  abstract-factory.cpp  abstract-factory.h  advanced-creational-patterns.cpp  advanced-creational-patterns.h  factory-method.cpp  factory-method.h
advanced-creational-patterns/dep-injection/: coffee-machine-base.cpp  coffee-machine-base.h  icoffee-service.h  mock-coffee-service.h  proper-coffee-service.h
advanced-creational-patterns/interfaces/: coffee-factory.h  coffee-machine.h  coffee.h
basic-creational-patterns/demos/: builder.cpp  builder.h  prototype.cpp  singleton.cpp
behavioral-chain-of-responsibility-to-memento/Globoticket/: Globoticket.sln
behavioral-chain-of-responsibility-to-memento/Globoticket/Globoticket.Processing/: Globoticket.Processing.cpp  Globoticket.Processing.filters  Globoticket.Processing.h  Globoticket.Processing.vcxproj
behavioral-chain-of-responsibility-to-memento/Globoticket/Globoticket.Processing/Business/: Accounting.cpp  Accounting.h  ColorChanger.cpp  ColorChanger.h  Printing.cpp  (+3 more)
behavioral-chain-of-responsibility-to-memento/notes/: chain-of-command.md  command-pattern.md  notes-command-pattern.md
notes/: notes-basic-creational-patterns.md  notes-chain-of-command.md  notes-interpreter-pattern.md  notes-solid-design-principles.md  notes-type-erasure.md
type-erasure/: CMakeLists.txt  circle.h  square.h  v1-free-functions.cpp  v1-main.cpp  v2-wrapper.cpp  v3-shape-const-ref.h
utils/: CMakeLists.txt  source-utils.cpp  source-utils.h
(+53 files in other folders)
